--- a/src/app/home.html
+++ b/src/app/home.html
@@ -11,21 +11,21 @@
 
 <body>
     <div class="countdown-container">
-        <h2>Contagem Regressiva para o Grande Dia</h2>
+        <h2>Contagem Regressiva</h2>
         <div id="countdown">
-            <div class="countdown-item">
+            <div class="countdown-item" id="days-container">
                 <div id="days">0</div>
                 <span>Dias</span>
             </div>
-            <div class="countdown-item">
+            <div class="countdown-item" id="hours-container">
                 <div id="hours">0</div>
                 <span>Horas</span>
             </div>
-            <div class="countdown-item">
+            <div class="countdown-item" id="minutes-container">
                 <div id="minutes">0</div>
                 <span>Minutos</span>
             </div>
-            <div class="countdown-item">
+            <div class="countdown-item" id="seconds-container">
                 <div id="seconds">0</div>
                 <span>Segundos</span>
             </div>
@@ -49,26 +49,6 @@
             <i class="fas fa-tshirt"></i>
             <span>Dress Code</span>
         </a>
-    </div>
-
-    <!-- Modal para a Lista de Presentes -->
-    <div id="giftListModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Escolha uma opção de presente</h2>
-            <a href="https://www.finalfeliz.de/filipe-querino-nathielly-jorge" target="_blank" class="modal-button">Magalu</a>
-            <a href="giftgallery.html" target="_blank" class="modal-button">PIX</a>
-        </div>
-    </div>
-
-    <!-- Modal para Localização -->
-    <div id="locationModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Escolha uma opção de localização</h2>
-            <a href="https://abrir.link/zjsDp" target="_blank" class="modal-button">Localização no Mapa</a>
-            <a href="https://santacatarina360.github.io/KiosqueDigoeMoni/" target="_blank" class="modal-button">Ver Local em 3D</a>
-        </div>
     </div>
 
     <script src="../scripts/home.js"></script>
