--- a/src/app/home.html
+++ b/src/app/home.html
@@ -10,24 +10,30 @@
 </head>
 
 <body>
+    <h2>Contagem Regressiva</h2>
     <div class="countdown-container">
-        <h2>Contagem Regressiva</h2>
-        <div id="countdown">
-            <div class="countdown-item" id="days-container">
-                <div id="days">0</div>
-                <span>Dias</span>
+        <div class="countdown-box">
+            <div class="modal-small">
+                <div id="days" class="countdown-number">24</div>
+                <div class="countdown-label">Dias</div>
             </div>
-            <div class="countdown-item" id="hours-container">
-                <div id="hours">0</div>
-                <span>Horas</span>
+        </div>
+        <div class="countdown-box">
+            <div class="modal-small">
+                <div id="hours" class="countdown-number">07</div>
+                <div class="countdown-label">Horas</div>
             </div>
-            <div class="countdown-item" id="minutes-container">
-                <div id="minutes">0</div>
-                <span>Minutos</span>
+        </div>
+        <div class="countdown-box">
+            <div class="modal-small">
+                <div id="minutes" class="countdown-number">53</div>
+                <div class="countdown-label">Minutos</div>
             </div>
-            <div class="countdown-item" id="seconds-container">
-                <div id="seconds">0</div>
-                <span>Segundos</span>
+        </div>
+        <div class="countdown-box">
+            <div class="modal-small">
+                <div id="seconds" class="countdown-number">50</div>
+                <div class="countdown-label">Segundos</div>
             </div>
         </div>
     </div>
