--- a/src/app/styles/home.css
+++ b/src/app/styles/home.css
@@ -23,12 +23,14 @@ h2 {
     justify-content: center;
     gap: 15px;
     margin-bottom: 20px;
+    flex-wrap: wrap; /* Adiciona flexibilidade para dispositivos menores */
 }
 
 .countdown-box {
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-basis: 100px;
 }
 
 .modal-small {
@@ -102,4 +104,36 @@ h2 {
     margin-left: 10px;
     font-size: 1.2rem;
     white-space: nowrap;
+}
+
+/* Adaptações para dispositivos móveis */
+@media (max-width: 600px) {
+    .countdown-container {
+        gap: 10px;
+        flex-wrap: wrap;
+    }
+
+    .modal-small {
+        padding: 15px;
+        min-width: 80px;
+        min-height: 80px;
+    }
+
+    .countdown-number {
+        font-size: 2rem;
+    }
+
+    .countdown-label {
+        font-size: 0.9rem;
+    }
+
+    .button {
+        width: 200px;
+        height: 80px;
+        font-size: 1.2rem;
+    }
+
+    .button i {
+        font-size: 1.8rem;
+    }
 }
