--- a/src/app/confirm.html
+++ b/src/app/confirm.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
+    <h2 class="page-title">Confirmação de Presença</h2>
     <div class="form-container">
-        <h2>Confirmação de Presença</h2>
         <form id="rsvp-form">
             <div class="input-group">
                 <label for="name">Nome completo</label>
