--- a/src/app/styles/confirm.css
+++ b/src/app/styles/confirm.css
@@ -120,6 +120,11 @@ body {
 }
 
 @media (max-width: 600px) {
+    .form-container {
+        width: 95%; /* Reduz a largura da modal para caber melhor em telas menores */
+        padding: 15px;
+    }
+
     .form-container input,
     .form-container button {
         padding: 8px;
