--- a/src/app/home.html
+++ b/src/app/home.html
@@ -57,6 +57,26 @@
         </a>
     </div>
 
+    <!-- Modal para a Lista de Presentes -->
+    <div id="giftListModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Escolha uma opção de presente</h2>
+            <a href="https://www.finalfeliz.de/filipe-querino-nathielly-jorge" target="_blank" class="modal-button">Magalu</a>
+            <a href="giftgallery.html" target="_blank" class="modal-button">PIX</a>
+        </div>
+    </div>
+
+    <!-- Modal para Localização -->
+    <div id="locationModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Escolha uma opção de localização</h2>
+            <a href="https://abrir.link/zjsDp" target="_blank" class="modal-button">Localização no Mapa</a>
+            <a href="https://santacatarina360.github.io/KiosqueDigoeMoni/" target="_blank" class="modal-button">Ver Local em 3D</a>
+        </div>
+    </div>
+
     <script src="../scripts/home.js"></script>
 </body>
 
