--- a/src/app/dress-code.html
+++ b/src/app/dress-code.html
@@ -22,6 +22,7 @@
             margin: 20px 0;
             font-family: 'Cormorant SC', serif;
             font-size: 2.5rem;
+            text-align: center;
         }
 
         .description {
@@ -113,6 +114,22 @@
 
             .modal-content {
                 max-width: 90%;
+            }
+
+            .description {
+                font-size: 1rem;
+                margin: 10px;
+            }
+
+            h1 {
+                font-size: 2rem;
+                margin: 15px 0;
+            }
+
+            .close {
+                font-size: 30px;
+                top: 5px;
+                right: 10px;
             }
         }
     </style>
